objects/Student_Scoring_Skills__c.object
<CustomObject>
    <fields>
        <fullName>Points__c</fullName>
        <description>Points of student</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <label>Student ID</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Student Scoring Skills</relationshipLabel>
        <relationshipName>Student_Scoring_Skills</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Student_Skill__c</fullName>
        <description>Master detail Student Skill</description>
        <label>Student Skill</label>
        <referenceTo>Student_Scoring_Skill__c</referenceTo>
        <relationshipLabel>Student Scoring Skills</relationshipLabel>
        <relationshipName>Student_Scoring_Skills</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student Scoring Skills</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCK-{00000}</displayFormat>
        <label>Student Scoring Skills Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Scoring Skills</pluralLabel>
    <recordTypes>
        <fullName>Database_Network</fullName>
        <active>true</active>
        <description>Database &amp; Network</description>
        <label>Database &amp; Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Aplication</fullName>
        <active>true</active>
        <description>Web Aplication</description>
        <label>Web Aplication</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>